# linux_mail_db

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml
src/: config.rs  endpoints.rs  mail.rs  main.rs  tail.rs
