[package]
name = "mail-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
axum = "0.6.1"
anyhow = "1.0.68"
thiserror = "1.0.38"
regex = "1.7.0"
rustc-hash = "1.1.0"
flate2 = "1.0.25"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"
parking_lot = "0.12.1"
notify = "5.0.0"
notify-debouncer-mini = { version = "0.2.1", features = ["serde"] }
tokio = { version = "1.24.0", features = ["full"] }
once_cell = "1.17.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
jemalloc = false